--- a/README
+++ b/README
@@ -1,11 +1,6 @@
 README 
 ======
+This plugin provides the GSON library for JOSM plugins.
+    * Licensed under GPL v3 (see LICENSE)
 
-Readme for your plugin 
-
-    * Plugin author and contact email address.
-    
-    * The license for your plugin source code. If you have no special preferences, 
-      you can pick the license that is used for JOSM ("GPL v2 or later").
-      
-    * Notes for future developers, if needed.
+The current embedded version of GSON is 2.4.
